kubernetes/github-action-runner-controller-webhook/webhook-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: actions-runner-controller-github-webhook-server
  namespace: actions-runner-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: actions-runner-controller-github-webhook-server
    app.kubernetes.io/name: actions-runner-controller
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actions-runner-controller-github-webhook-server
  namespace: actions-runner-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: actions-runner-controller-github-webhook-server
      app.kubernetes.io/name: actions-runner-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: actions-runner-controller-github-webhook-server
        app.kubernetes.io/name: actions-runner-controller
    spec:
      containers:
      - args:
        - --metrics-addr=127.0.0.1:8080
        - --sync-period=10m
        command:
        - /github-webhook-server
        image: summerwind/actions-runner-controller:v0.20.4
        imagePullPolicy: IfNotPresent
        name: github-webhook-server
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: quay.io/brancz/kube-rbac-proxy:v0.10.0
        imagePullPolicy: IfNotPresent
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: metrics-port
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
